# wssp

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  plan.toml.tmp
docs/: architecture.md  contributing.md  conventions.md  development.md  security.md  unlock-strategies.md
scripts/: integration_test.sh  test_ui_trigger.sh  verify_daemon.sh
systemd/portals/: wssp.portal
systemd/user/: wss-daemon.service  wssp-daemon.service
wss-cli/: Cargo.toml
wss-cli/src/: main.rs
wss-common/: Cargo.toml
wss-core/: Cargo.toml
wss-core/src/: vault.rs
wss-daemon/: Cargo.toml
wss-daemon/src/: collection.rs  error.rs  ipc.rs  main.rs  portal.rs  service.rs  session.rs  state.rs  vault.rs
wss-pam/: Cargo.toml
wss-pam/src/: lib.rs
wss-prompter/: Cargo.toml
wss-prompter/src/: main.rs
wssp-cli/: Cargo.toml
wssp-cli/src/: main.rs
wssp-common/: Cargo.toml
wssp-common/src/: ipc.rs
wssp-core/: Cargo.toml
wssp-core/src/: domain.rs  error.rs  vault.rs
wssp-daemon/: Cargo.toml
wssp-daemon/src/: collection.rs  error.rs  ipc.rs  item.rs  logind.rs  main.rs  prompt.rs  service.rs  state.rs  unlock.rs  vault.rs
wssp-pam/: Cargo.toml
wssp-prompter/: Cargo.toml
wssp-prompter/src/: main.rs
