[workspace]
members = [
    "wssp-daemon",
    "wssp-prompter",
    "wssp-common",
    "wssp-cli",
    "wssp-pam"
, "wssp-core"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
zbus = "5.4"
oo7 = "0.6"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "2.0"
directories = "6.0"
rand = { version = "0.8", features = ["getrandom"] }
aes = "0.8"
cbc = "0.1"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
gtk4 = { version = "0.9.7", package = "gtk4" }
libadwaita = { version = "0.7.2", package = "libadwaita" }
inotify = { version = "0.10", features = ["stream"] }
