[package]
name = "wss-core"
version = "1.0.3"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
zeroize = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
sha2 = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
