[package]
name = "wss-prompter"
version = "1.0.2"
edition = "2021"

[dependencies]
wss-common = { path = "../wss-common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
gtk4 = { version = "0.9", package = "gtk4" }
libadwaita = { version = "0.7", package = "libadwaita" }
serde_json = "1.0"
