[package]
name = "wssp-prompter"
version = "1.1.0"
edition = "2021"

[dependencies]
wssp-common = { path = "../wssp-common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
gtk4 = { version = "0.9", package = "gtk4" }
libadwaita = { version = "0.7", package = "libadwaita" }
serde_json = "1.0"
